@@ -4,6 +4,7 @@ from numpy import arange
 from PyQt5 import QtCore, QtWidgets
 from ui.Ui_forecast1hwindow import Ui_forecast1hWindow
 from ui.Ui_forecast6hwindow import Ui_forecast6hWindow
+from ui.Ui_forecast1dwindow import Ui_forecast1dWindow
 from functions.utils import weather_to_pictogrammes, days_months_dictionary, wind_dir_to_pictogramme
 
 
@@ -97,4 +98,48 @@ class My6hFCDetails(QtWidgets.QDialog, Ui_forecast6hWindow):
 
     def close_window(self):
         logging.debug('gui - weather_windows.py - My6hFCDetails - close_window')
+        self.close()
+
+
+class My1dFCDetails(QtWidgets.QDialog, Ui_forecast1dWindow):
+    def __init__(self, data, parent=None):
+        logging.info('gui - other_windows_functions.py - My1dFCDetails - __init__')
+        QtWidgets.QWidget.__init__(self, parent)
+        self.setupUi(self)
+        self.setWindowFlags(QtCore.Qt.FramelessWindowHint)
+        shadow = QtWidgets.QGraphicsDropShadowEffect()
+        shadow.setOffset(5)
+        shadow.setBlurRadius(25)
+        self.setGraphicsEffect(shadow)
+        self.move(int((self.parent().width() - self.width()) / 2), int((self.parent().height() - self.height()) / 2))
+        self.data = data
+        self.ok_button.clicked.connect(self.close_window)
+        self.parse_forecast()
+
+    def parse_forecast(self):
+        logging.debug('gui - other_windows_functions.py - My1dFCDetails - parse_forecast')
+        wspeed = round(self.data['w_spd'] * 3600 / 1000)
+        wdir = self.data['w_dir']
+        date = (days_months_dictionary()['day'][self.data['date'].weekday() + 1] + ' ' + str(self.data['date'].day)
+                + ' ' + days_months_dictionary()['month'][self.data['date'].month])
+        if wspeed > 5:
+            if wdir > 180:
+                wdir -= 180
+            else:
+                wdir += 180
+            idx = bisect.bisect_right(list(arange(0, 360, 7.5)) + [360], wdir)
+            icon = wind_dir_to_pictogramme(idx)
+        else:
+            icon = wind_dir_to_pictogramme(0)
+        self.dir_ln.setIcon(icon)
+        self.date_label.setText(date)
+        self.temp_ln.setText(self.data['temp'])
+        self.pres_ln.setText(str(self.data['pres']) + ' hPa')
+        self.speed_ln.setText(str(wspeed) + ' km/h')
+        self.cover_ln.setText(str(self.data['cover']) + ' %')
+        self.rain_ln.setText(str(self.data['rain']) + ' mm')
+        self.weather_lb.setIcon(weather_to_pictogrammes(self.data['weather']))
+
+    def close_window(self):
+        logging.debug('gui - other_windows_functions.py - My1dFCDetails - close_window')
         self.close()
